src/parser.output
Terminals unused in grammar

    "."
    UNKNOWN


Grammar

    0 $accept: program $end

    1 program: classes

    2 classes: classes classDef
    3        | ε

    4 classDef: "class" IDENTIFIER "{" functions "}" optionalSemicolons

    5 optionalSemicolons: optionalSemicolons ";"
    6                   | ε

    7 accessSpecifiers: "public" ":"
    8                 | "private" ":"
    9                 | "protected" ":"
   10                 | ε

   11 functions: functions accessSpecifiers function optionalSemicolons
   12          | ε

   13 function: IDENTIFIER IDENTIFIER "(" parameters ")" "{" statements "}"
   14         | constructorDef
   15         | destructorDef

   16 parameters: parametersList
   17           | ε

   18 parametersList: IDENTIFIER IDENTIFIER
   19               | parametersList "," IDENTIFIER IDENTIFIER

   20 constructorDef: "constructor" "(" parameters ")" "{" statements "}"

   21 destructorDef: "destructor" "(" ")" "{" statements "}"

   22 variableDeclarations: IDENTIFIER IDENTIFIER init moreVariableDeclarations ";"

   23 init: "=" expression
   24     | ε

   25 moreVariableDeclarations: moreVariableDeclarations "," IDENTIFIER init
   26                         | ε

   27 functionCall: IDENTIFIER "(" arguments ")"

   28 arguments: argumentsList
   29          | ε

   30 argumentsList: argumentsList "," expression
   31              | expression

   32 ifStatement: "if" "(" expression ")" "{" statements "}"

   33 ifElseStatement: ifStatement elseIfStatement elseStatement

   34 elseIfStatement: elseIfStatement "else" ifStatement
   35                | ε

   36 elseStatement: "else" "(" expression ")" "{" statements "}"

   37 statements: statements statement
   38           | ε

   39 statement: variableDeclarations
   40          | ifStatement
   41          | ifElseStatement
   42          | expression ";"
   43          | "return" expression ";"
   44          | "return" ";"
   45          | ";"

   46 expression: expression "+" expression
   47           | expression "-" expression
   48           | expression "*" expression
   49           | expression "/" expression
   50           | expression "%" expression
   51           | expression "|" expression
   52           | expression "&" expression
   53           | expression ">" expression
   54           | expression "<" expression
   55           | expression "^" expression
   56           | expression "<<" expression
   57           | expression ">>" expression
   58           | expression "||" expression
   59           | expression "&&" expression
   60           | expression ">=" expression
   61           | expression "<=" expression
   62           | expression "==" expression
   63           | expression "!=" expression
   64           | IDENTIFIER "=" expression
   65           | IDENTIFIER "+=" expression
   66           | IDENTIFIER "-=" expression
   67           | IDENTIFIER "*=" expression
   68           | IDENTIFIER "/=" expression
   69           | IDENTIFIER "%=" expression
   70           | IDENTIFIER "&=" expression
   71           | IDENTIFIER "|=" expression
   72           | IDENTIFIER "^=" expression
   73           | IDENTIFIER "<<=" expression
   74           | IDENTIFIER ">>=" expression
   75           | "+" expression
   76           | "-" expression
   77           | "!" expression
   78           | "~" expression
   79           | "*" IDENTIFIER
   80           | "&" IDENTIFIER
   81           | "++" IDENTIFIER
   82           | "--" IDENTIFIER
   83           | IDENTIFIER "++"
   84           | IDENTIFIER "--"
   85           | "(" expression ")"
   86           | functionCall
   87           | IDENTIFIER
   88           | INTEGER_LITERAL
   89           | FLOATING_LITERAL
   90           | BOOLEAN_LITERAL
   91           | STRING_LITERAL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "class" (258) 4
    "return" (259) 43 44
    "public" (260) 7
    "protected" (261) 9
    "private" (262) 8
    "constructor" (263) 20
    "destructor" (264) 21
    "if" (265) 32
    "else" (266) 34 36
    "{" (267) 4 13 20 21 32 36
    "}" (268) 4 13 20 21 32 36
    "(" (269) 13 20 21 27 32 36 85
    ")" (270) 13 20 21 27 32 36 85
    "." (271)
    ":" (272) 7 8 9
    ";" (273) 5 22 42 43 44 45
    "," (274) 19 25 30
    UNKNOWN (275)
    "+" (276) 46 75
    "-" (277) 47 76
    "*" (278) 48 79
    "/" (279) 49
    "%" (280) 50
    "++" (281) 81 83
    "--" (282) 82 84
    ">" (283) 53
    "<" (284) 54
    ">=" (285) 60
    "<=" (286) 61
    "==" (287) 62
    "!=" (288) 63
    "||" (289) 58
    "&&" (290) 59
    "!" (291) 77
    "|" (292) 51
    "&" (293) 52 80
    "^" (294) 55
    "~" (295) 78
    "<<" (296) 56
    ">>" (297) 57
    "=" (298) 23 64
    "+=" (299) 65
    "-=" (300) 66
    "*=" (301) 67
    "/=" (302) 68
    "%=" (303) 69
    "&=" (304) 70
    "|=" (305) 71
    "^=" (306) 72
    "<<=" (307) 73
    ">>=" (308) 74
    INTEGER_LITERAL <long long int> (309) 88
    FLOATING_LITERAL <long double> (310) 89
    BOOLEAN_LITERAL <bool> (311) 90
    STRING_LITERAL <string> (312) 91
    IDENTIFIER <string> (313) 4 13 18 19 22 25 27 64 65 66 67 68 69 70 71 72 73 74 79 80 81 82 83 84 87
    UMINUS (314)
    UPLUS (315)
    ADDRESS_OF (316)
    DEREFERENCE (317)
    PRE_INCREMENT (318)
    PRE_DECREMENT (319)
    POST_INCREMENT (320)
    POST_DECREMENT (321)


Nonterminals, with rules where they appear

    $accept (67)
        on left: 0
    program (68)
        on left: 1
        on right: 0
    classes (69)
        on left: 2 3
        on right: 1 2
    classDef (70)
        on left: 4
        on right: 2
    optionalSemicolons (71)
        on left: 5 6
        on right: 4 5 11
    accessSpecifiers (72)
        on left: 7 8 9 10
        on right: 11
    functions (73)
        on left: 11 12
        on right: 4 11
    function (74)
        on left: 13 14 15
        on right: 11
    parameters (75)
        on left: 16 17
        on right: 13 20
    parametersList (76)
        on left: 18 19
        on right: 16 19
    constructorDef (77)
        on left: 20
        on right: 14
    destructorDef (78)
        on left: 21
        on right: 15
    variableDeclarations (79)
        on left: 22
        on right: 39
    init (80)
        on left: 23 24
        on right: 22 25
    moreVariableDeclarations (81)
        on left: 25 26
        on right: 22 25
    functionCall (82)
        on left: 27
        on right: 86
    arguments (83)
        on left: 28 29
        on right: 27
    argumentsList (84)
        on left: 30 31
        on right: 28 30
    ifStatement (85)
        on left: 32
        on right: 33 34 40
    ifElseStatement (86)
        on left: 33
        on right: 41
    elseIfStatement (87)
        on left: 34 35
        on right: 33 34
    elseStatement (88)
        on left: 36
        on right: 33
    statements (89)
        on left: 37 38
        on right: 13 20 21 32 36 37
    statement (90)
        on left: 39 40 41 42 43 44 45
        on right: 37
    expression (91)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
        on right: 23 30 31 32 36 42 43 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 85


State 0

    0 $accept: • program $end

    $default  reduce using rule 3 (classes)

    program  go to state 1
    classes  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: classes •
    2 classes: classes • classDef

    "class"  shift, and go to state 4

    $default  reduce using rule 1 (program)

    classDef  go to state 5


State 3

    0 $accept: program $end •

    $default  accept


State 4

    4 classDef: "class" • IDENTIFIER "{" functions "}" optionalSemicolons

    IDENTIFIER  shift, and go to state 6


State 5

    2 classes: classes classDef •

    $default  reduce using rule 2 (classes)


State 6

    4 classDef: "class" IDENTIFIER • "{" functions "}" optionalSemicolons

    "{"  shift, and go to state 7


State 7

    4 classDef: "class" IDENTIFIER "{" • functions "}" optionalSemicolons

    $default  reduce using rule 12 (functions)

    functions  go to state 8


State 8

    4 classDef: "class" IDENTIFIER "{" functions • "}" optionalSemicolons
   11 functions: functions • accessSpecifiers function optionalSemicolons

    "public"     shift, and go to state 9
    "protected"  shift, and go to state 10
    "private"    shift, and go to state 11
    "}"          shift, and go to state 12

    $default  reduce using rule 10 (accessSpecifiers)

    accessSpecifiers  go to state 13


State 9

    7 accessSpecifiers: "public" • ":"

    ":"  shift, and go to state 14


State 10

    9 accessSpecifiers: "protected" • ":"

    ":"  shift, and go to state 15


State 11

    8 accessSpecifiers: "private" • ":"

    ":"  shift, and go to state 16


State 12

    4 classDef: "class" IDENTIFIER "{" functions "}" • optionalSemicolons

    $default  reduce using rule 6 (optionalSemicolons)

    optionalSemicolons  go to state 17


State 13

   11 functions: functions accessSpecifiers • function optionalSemicolons

    "constructor"  shift, and go to state 18
    "destructor"   shift, and go to state 19
    IDENTIFIER     shift, and go to state 20

    function        go to state 21
    constructorDef  go to state 22
    destructorDef   go to state 23


State 14

    7 accessSpecifiers: "public" ":" •

    $default  reduce using rule 7 (accessSpecifiers)


State 15

    9 accessSpecifiers: "protected" ":" •

    $default  reduce using rule 9 (accessSpecifiers)


State 16

    8 accessSpecifiers: "private" ":" •

    $default  reduce using rule 8 (accessSpecifiers)


State 17

    4 classDef: "class" IDENTIFIER "{" functions "}" optionalSemicolons •
    5 optionalSemicolons: optionalSemicolons • ";"

    ";"  shift, and go to state 24

    $default  reduce using rule 4 (classDef)


State 18

   20 constructorDef: "constructor" • "(" parameters ")" "{" statements "}"

    "("  shift, and go to state 25


State 19

   21 destructorDef: "destructor" • "(" ")" "{" statements "}"

    "("  shift, and go to state 26


State 20

   13 function: IDENTIFIER • IDENTIFIER "(" parameters ")" "{" statements "}"

    IDENTIFIER  shift, and go to state 27


State 21

   11 functions: functions accessSpecifiers function • optionalSemicolons

    $default  reduce using rule 6 (optionalSemicolons)

    optionalSemicolons  go to state 28


State 22

   14 function: constructorDef •

    $default  reduce using rule 14 (function)


State 23

   15 function: destructorDef •

    $default  reduce using rule 15 (function)


State 24

    5 optionalSemicolons: optionalSemicolons ";" •

    $default  reduce using rule 5 (optionalSemicolons)


State 25

   20 constructorDef: "constructor" "(" • parameters ")" "{" statements "}"

    IDENTIFIER  shift, and go to state 29

    $default  reduce using rule 17 (parameters)

    parameters      go to state 30
    parametersList  go to state 31


State 26

   21 destructorDef: "destructor" "(" • ")" "{" statements "}"

    ")"  shift, and go to state 32


State 27

   13 function: IDENTIFIER IDENTIFIER • "(" parameters ")" "{" statements "}"

    "("  shift, and go to state 33


State 28

    5 optionalSemicolons: optionalSemicolons • ";"
   11 functions: functions accessSpecifiers function optionalSemicolons •

    ";"  shift, and go to state 24

    $default  reduce using rule 11 (functions)


State 29

   18 parametersList: IDENTIFIER • IDENTIFIER

    IDENTIFIER  shift, and go to state 34


State 30

   20 constructorDef: "constructor" "(" parameters • ")" "{" statements "}"

    ")"  shift, and go to state 35


State 31

   16 parameters: parametersList •
   19 parametersList: parametersList • "," IDENTIFIER IDENTIFIER

    ","  shift, and go to state 36

    $default  reduce using rule 16 (parameters)


State 32

   21 destructorDef: "destructor" "(" ")" • "{" statements "}"

    "{"  shift, and go to state 37


State 33

   13 function: IDENTIFIER IDENTIFIER "(" • parameters ")" "{" statements "}"

    IDENTIFIER  shift, and go to state 29

    $default  reduce using rule 17 (parameters)

    parameters      go to state 38
    parametersList  go to state 31


State 34

   18 parametersList: IDENTIFIER IDENTIFIER •

    $default  reduce using rule 18 (parametersList)


State 35

   20 constructorDef: "constructor" "(" parameters ")" • "{" statements "}"

    "{"  shift, and go to state 39


State 36

   19 parametersList: parametersList "," • IDENTIFIER IDENTIFIER

    IDENTIFIER  shift, and go to state 40


State 37

   21 destructorDef: "destructor" "(" ")" "{" • statements "}"

    $default  reduce using rule 38 (statements)

    statements  go to state 41


State 38

   13 function: IDENTIFIER IDENTIFIER "(" parameters • ")" "{" statements "}"

    ")"  shift, and go to state 42


State 39

   20 constructorDef: "constructor" "(" parameters ")" "{" • statements "}"

    $default  reduce using rule 38 (statements)

    statements  go to state 43


State 40

   19 parametersList: parametersList "," IDENTIFIER • IDENTIFIER

    IDENTIFIER  shift, and go to state 44


State 41

   21 destructorDef: "destructor" "(" ")" "{" statements • "}"
   37 statements: statements • statement

    "return"          shift, and go to state 45
    "if"              shift, and go to state 46
    "}"               shift, and go to state 47
    "("               shift, and go to state 48
    ";"               shift, and go to state 49
    "+"               shift, and go to state 50
    "-"               shift, and go to state 51
    "*"               shift, and go to state 52
    "++"              shift, and go to state 53
    "--"              shift, and go to state 54
    "!"               shift, and go to state 55
    "&"               shift, and go to state 56
    "~"               shift, and go to state 57
    INTEGER_LITERAL   shift, and go to state 58
    FLOATING_LITERAL  shift, and go to state 59
    BOOLEAN_LITERAL   shift, and go to state 60
    STRING_LITERAL    shift, and go to state 61
    IDENTIFIER        shift, and go to state 62

    variableDeclarations  go to state 63
    functionCall          go to state 64
    ifStatement           go to state 65
    ifElseStatement       go to state 66
    statement             go to state 67
    expression            go to state 68


State 42

   13 function: IDENTIFIER IDENTIFIER "(" parameters ")" • "{" statements "}"

    "{"  shift, and go to state 69


State 43

   20 constructorDef: "constructor" "(" parameters ")" "{" statements • "}"
   37 statements: statements • statement

    "return"          shift, and go to state 45
    "if"              shift, and go to state 46
    "}"               shift, and go to state 70
    "("               shift, and go to state 48
    ";"               shift, and go to state 49
    "+"               shift, and go to state 50
    "-"               shift, and go to state 51
    "*"               shift, and go to state 52
    "++"              shift, and go to state 53
    "--"              shift, and go to state 54
    "!"               shift, and go to state 55
    "&"               shift, and go to state 56
    "~"               shift, and go to state 57
    INTEGER_LITERAL   shift, and go to state 58
    FLOATING_LITERAL  shift, and go to state 59
    BOOLEAN_LITERAL   shift, and go to state 60
    STRING_LITERAL    shift, and go to state 61
    IDENTIFIER        shift, and go to state 62

    variableDeclarations  go to state 63
    functionCall          go to state 64
    ifStatement           go to state 65
    ifElseStatement       go to state 66
    statement             go to state 67
    expression            go to state 68


State 44

   19 parametersList: parametersList "," IDENTIFIER IDENTIFIER •

    $default  reduce using rule 19 (parametersList)


State 45

   43 statement: "return" • expression ";"
   44          | "return" • ";"

    "("               shift, and go to state 48
    ";"               shift, and go to state 71
    "+"               shift, and go to state 50
    "-"               shift, and go to state 51
    "*"               shift, and go to state 52
    "++"              shift, and go to state 53
    "--"              shift, and go to state 54
    "!"               shift, and go to state 55
    "&"               shift, and go to state 56
    "~"               shift, and go to state 57
    INTEGER_LITERAL   shift, and go to state 58
    FLOATING_LITERAL  shift, and go to state 59
    BOOLEAN_LITERAL   shift, and go to state 60
    STRING_LITERAL    shift, and go to state 61
    IDENTIFIER        shift, and go to state 72

    functionCall  go to state 64
    expression    go to state 73


State 46

   32 ifStatement: "if" • "(" expression ")" "{" statements "}"

    "("  shift, and go to state 74


State 47

   21 destructorDef: "destructor" "(" ")" "{" statements "}" •

    $default  reduce using rule 21 (destructorDef)


State 48

   85 expression: "(" • expression ")"

    "("               shift, and go to state 48
    "+"               shift, and go to state 50
    "-"               shift, and go to state 51
    "*"               shift, and go to state 52
    "++"              shift, and go to state 53
    "--"              shift, and go to state 54
    "!"               shift, and go to state 55
    "&"               shift, and go to state 56
    "~"               shift, and go to state 57
    INTEGER_LITERAL   shift, and go to state 58
    FLOATING_LITERAL  shift, and go to state 59
    BOOLEAN_LITERAL   shift, and go to state 60
    STRING_LITERAL    shift, and go to state 61
    IDENTIFIER        shift, and go to state 72

    functionCall  go to state 64
    expression    go to state 75


State 49

   45 statement: ";" •

    $default  reduce using rule 45 (statement)


State 50

   75 expression: "+" • expression

    "("               shift, and go to state 48
    "+"               shift, and go to state 50
    "-"               shift, and go to state 51
    "*"               shift, and go to state 52
    "++"              shift, and go to state 53
    "--"              shift, and go to state 54
    "!"               shift, and go to state 55
    "&"               shift, and go to state 56
    "~"               shift, and go to state 57
    INTEGER_LITERAL   shift, and go to state 58
    FLOATING_LITERAL  shift, and go to state 59
    BOOLEAN_LITERAL   shift, and go to state 60
    STRING_LITERAL    shift, and go to state 61
    IDENTIFIER        shift, and go to state 72

    functionCall  go to state 64
    expression    go to state 76


State 51

   76 expression: "-" • expression

    "("               shift, and go to state 48
    "+"               shift, and go to state 50
    "-"               shift, and go to state 51
    "*"               shift, and go to state 52
    "++"              shift, and go to state 53
    "--"              shift, and go to state 54
    "!"               shift, and go to state 55
    "&"               shift, and go to state 56
    "~"               shift, and go to state 57
    INTEGER_LITERAL   shift, and go to state 58
    FLOATING_LITERAL  shift, and go to state 59
    BOOLEAN_LITERAL   shift, and go to state 60
    STRING_LITERAL    shift, and go to state 61
    IDENTIFIER        shift, and go to state 72

    functionCall  go to state 64
    expression    go to state 77


State 52

   79 expression: "*" • IDENTIFIER

    IDENTIFIER  shift, and go to state 78


State 53

   81 expression: "++" • IDENTIFIER

    IDENTIFIER  shift, and go to state 79


State 54

   82 expression: "--" • IDENTIFIER

    IDENTIFIER  shift, and go to state 80


State 55

   77 expression: "!" • expression

    "("               shift, and go to state 48
    "+"               shift, and go to state 50
    "-"               shift, and go to state 51
    "*"               shift, and go to state 52
    "++"              shift, and go to state 53
    "--"              shift, and go to state 54
    "!"               shift, and go to state 55
    "&"               shift, and go to state 56
    "~"               shift, and go to state 57
    INTEGER_LITERAL   shift, and go to state 58
    FLOATING_LITERAL  shift, and go to state 59
    BOOLEAN_LITERAL   shift, and go to state 60
    STRING_LITERAL    shift, and go to state 61
    IDENTIFIER        shift, and go to state 72

    functionCall  go to state 64
    expression    go to state 81


State 56

   80 expression: "&" • IDENTIFIER

    IDENTIFIER  shift, and go to state 82


State 57

   78 expression: "~" • expression

    "("               shift, and go to state 48
    "+"               shift, and go to state 50
    "-"               shift, and go to state 51
    "*"               shift, and go to state 52
    "++"              shift, and go to state 53
    "--"              shift, and go to state 54
    "!"               shift, and go to state 55
    "&"               shift, and go to state 56
    "~"               shift, and go to state 57
    INTEGER_LITERAL   shift, and go to state 58
    FLOATING_LITERAL  shift, and go to state 59
    BOOLEAN_LITERAL   shift, and go to state 60
    STRING_LITERAL    shift, and go to state 61
    IDENTIFIER        shift, and go to state 72

    functionCall  go to state 64
    expression    go to state 83


State 58

   88 expression: INTEGER_LITERAL •

    $default  reduce using rule 88 (expression)


State 59

   89 expression: FLOATING_LITERAL •

    $default  reduce using rule 89 (expression)


State 60

   90 expression: BOOLEAN_LITERAL •

    $default  reduce using rule 90 (expression)


State 61

   91 expression: STRING_LITERAL •

    $default  reduce using rule 91 (expression)


State 62

   22 variableDeclarations: IDENTIFIER • IDENTIFIER init moreVariableDeclarations ";"
   27 functionCall: IDENTIFIER • "(" arguments ")"
   64 expression: IDENTIFIER • "=" expression
   65           | IDENTIFIER • "+=" expression
   66           | IDENTIFIER • "-=" expression
   67           | IDENTIFIER • "*=" expression
   68           | IDENTIFIER • "/=" expression
   69           | IDENTIFIER • "%=" expression
   70           | IDENTIFIER • "&=" expression
   71           | IDENTIFIER • "|=" expression
   72           | IDENTIFIER • "^=" expression
   73           | IDENTIFIER • "<<=" expression
   74           | IDENTIFIER • ">>=" expression
   83           | IDENTIFIER • "++"
   84           | IDENTIFIER • "--"
   87           | IDENTIFIER •

    "("         shift, and go to state 84
    "++"        shift, and go to state 85
    "--"        shift, and go to state 86
    "="         shift, and go to state 87
    "+="        shift, and go to state 88
    "-="        shift, and go to state 89
    "*="        shift, and go to state 90
    "/="        shift, and go to state 91
    "%="        shift, and go to state 92
    "&="        shift, and go to state 93
    "|="        shift, and go to state 94
    "^="        shift, and go to state 95
    "<<="       shift, and go to state 96
    ">>="       shift, and go to state 97
    IDENTIFIER  shift, and go to state 98

    $default  reduce using rule 87 (expression)


State 63

   39 statement: variableDeclarations •

    $default  reduce using rule 39 (statement)


State 64

   86 expression: functionCall •

    $default  reduce using rule 86 (expression)


State 65

   33 ifElseStatement: ifStatement • elseIfStatement elseStatement
   40 statement: ifStatement •

    "else"    reduce using rule 35 (elseIfStatement)
    $default  reduce using rule 40 (statement)

    elseIfStatement  go to state 99


State 66

   41 statement: ifElseStatement •

    $default  reduce using rule 41 (statement)


State 67

   37 statements: statements statement •

    $default  reduce using rule 37 (statements)


State 68

   42 statement: expression • ";"
   46 expression: expression • "+" expression
   47           | expression • "-" expression
   48           | expression • "*" expression
   49           | expression • "/" expression
   50           | expression • "%" expression
   51           | expression • "|" expression
   52           | expression • "&" expression
   53           | expression • ">" expression
   54           | expression • "<" expression
   55           | expression • "^" expression
   56           | expression • "<<" expression
   57           | expression • ">>" expression
   58           | expression • "||" expression
   59           | expression • "&&" expression
   60           | expression • ">=" expression
   61           | expression • "<=" expression
   62           | expression • "==" expression
   63           | expression • "!=" expression

    ";"   shift, and go to state 100
    "+"   shift, and go to state 101
    "-"   shift, and go to state 102
    "*"   shift, and go to state 103
    "/"   shift, and go to state 104
    "%"   shift, and go to state 105
    ">"   shift, and go to state 106
    "<"   shift, and go to state 107
    ">="  shift, and go to state 108
    "<="  shift, and go to state 109
    "=="  shift, and go to state 110
    "!="  shift, and go to state 111
    "||"  shift, and go to state 112
    "&&"  shift, and go to state 113
    "|"   shift, and go to state 114
    "&"   shift, and go to state 115
    "^"   shift, and go to state 116
    "<<"  shift, and go to state 117
    ">>"  shift, and go to state 118


State 69

   13 function: IDENTIFIER IDENTIFIER "(" parameters ")" "{" • statements "}"

    $default  reduce using rule 38 (statements)

    statements  go to state 119


State 70

   20 constructorDef: "constructor" "(" parameters ")" "{" statements "}" •

    $default  reduce using rule 20 (constructorDef)


State 71

   44 statement: "return" ";" •

    $default  reduce using rule 44 (statement)


State 72

   27 functionCall: IDENTIFIER • "(" arguments ")"
   64 expression: IDENTIFIER • "=" expression
   65           | IDENTIFIER • "+=" expression
   66           | IDENTIFIER • "-=" expression
   67           | IDENTIFIER • "*=" expression
   68           | IDENTIFIER • "/=" expression
   69           | IDENTIFIER • "%=" expression
   70           | IDENTIFIER • "&=" expression
   71           | IDENTIFIER • "|=" expression
   72           | IDENTIFIER • "^=" expression
   73           | IDENTIFIER • "<<=" expression
   74           | IDENTIFIER • ">>=" expression
   83           | IDENTIFIER • "++"
   84           | IDENTIFIER • "--"
   87           | IDENTIFIER •

    "("    shift, and go to state 84
    "++"   shift, and go to state 85
    "--"   shift, and go to state 86
    "="    shift, and go to state 87
    "+="   shift, and go to state 88
    "-="   shift, and go to state 89
    "*="   shift, and go to state 90
    "/="   shift, and go to state 91
    "%="   shift, and go to state 92
    "&="   shift, and go to state 93
    "|="   shift, and go to state 94
    "^="   shift, and go to state 95
    "<<="  shift, and go to state 96
    ">>="  shift, and go to state 97

    $default  reduce using rule 87 (expression)


State 73

   43 statement: "return" expression • ";"
   46 expression: expression • "+" expression
   47           | expression • "-" expression
   48           | expression • "*" expression
   49           | expression • "/" expression
   50           | expression • "%" expression
   51           | expression • "|" expression
   52           | expression • "&" expression
   53           | expression • ">" expression
   54           | expression • "<" expression
   55           | expression • "^" expression
   56           | expression • "<<" expression
   57           | expression • ">>" expression
   58           | expression • "||" expression
   59           | expression • "&&" expression
   60           | expression • ">=" expression
   61           | expression • "<=" expression
   62           | expression • "==" expression
   63           | expression • "!=" expression

    ";"   shift, and go to state 120
    "+"   shift, and go to state 101
    "-"   shift, and go to state 102
    "*"   shift, and go to state 103
    "/"   shift, and go to state 104
    "%"   shift, and go to state 105
    ">"   shift, and go to state 106
    "<"   shift, and go to state 107
    ">="  shift, and go to state 108
    "<="  shift, and go to state 109
    "=="  shift, and go to state 110
    "!="  shift, and go to state 111
    "||"  shift, and go to state 112
    "&&"  shift, and go to state 113
    "|"   shift, and go to state 114
    "&"   shift, and go to state 115
    "^"   shift, and go to state 116
    "<<"  shift, and go to state 117
    ">>"  shift, and go to state 118


State 74

   32 ifStatement: "if" "(" • expression ")" "{" statements "}"

    "("               shift, and go to state 48
    "+"               shift, and go to state 50
    "-"               shift, and go to state 51
    "*"               shift, and go to state 52
    "++"              shift, and go to state 53
    "--"              shift, and go to state 54
    "!"               shift, and go to state 55
    "&"               shift, and go to state 56
    "~"               shift, and go to state 57
    INTEGER_LITERAL   shift, and go to state 58
    FLOATING_LITERAL  shift, and go to state 59
    BOOLEAN_LITERAL   shift, and go to state 60
    STRING_LITERAL    shift, and go to state 61
    IDENTIFIER        shift, and go to state 72

    functionCall  go to state 64
    expression    go to state 121


State 75

   46 expression: expression • "+" expression
   47           | expression • "-" expression
   48           | expression • "*" expression
   49           | expression • "/" expression
   50           | expression • "%" expression
   51           | expression • "|" expression
   52           | expression • "&" expression
   53           | expression • ">" expression
   54           | expression • "<" expression
   55           | expression • "^" expression
   56           | expression • "<<" expression
   57           | expression • ">>" expression
   58           | expression • "||" expression
   59           | expression • "&&" expression
   60           | expression • ">=" expression
   61           | expression • "<=" expression
   62           | expression • "==" expression
   63           | expression • "!=" expression
   85           | "(" expression • ")"

    ")"   shift, and go to state 122
    "+"   shift, and go to state 101
    "-"   shift, and go to state 102
    "*"   shift, and go to state 103
    "/"   shift, and go to state 104
    "%"   shift, and go to state 105
    ">"   shift, and go to state 106
    "<"   shift, and go to state 107
    ">="  shift, and go to state 108
    "<="  shift, and go to state 109
    "=="  shift, and go to state 110
    "!="  shift, and go to state 111
    "||"  shift, and go to state 112
    "&&"  shift, and go to state 113
    "|"   shift, and go to state 114
    "&"   shift, and go to state 115
    "^"   shift, and go to state 116
    "<<"  shift, and go to state 117
    ">>"  shift, and go to state 118


State 76

   46 expression: expression • "+" expression
   47           | expression • "-" expression
   48           | expression • "*" expression
   49           | expression • "/" expression
   50           | expression • "%" expression
   51           | expression • "|" expression
   52           | expression • "&" expression
   53           | expression • ">" expression
   54           | expression • "<" expression
   55           | expression • "^" expression
   56           | expression • "<<" expression
   57           | expression • ">>" expression
   58           | expression • "||" expression
   59           | expression • "&&" expression
   60           | expression • ">=" expression
   61           | expression • "<=" expression
   62           | expression • "==" expression
   63           | expression • "!=" expression
   75           | "+" expression •

    $default  reduce using rule 75 (expression)


State 77

   46 expression: expression • "+" expression
   47           | expression • "-" expression
   48           | expression • "*" expression
   49           | expression • "/" expression
   50           | expression • "%" expression
   51           | expression • "|" expression
   52           | expression • "&" expression
   53           | expression • ">" expression
   54           | expression • "<" expression
   55           | expression • "^" expression
   56           | expression • "<<" expression
   57           | expression • ">>" expression
   58           | expression • "||" expression
   59           | expression • "&&" expression
   60           | expression • ">=" expression
   61           | expression • "<=" expression
   62           | expression • "==" expression
   63           | expression • "!=" expression
   76           | "-" expression •

    $default  reduce using rule 76 (expression)


State 78

   79 expression: "*" IDENTIFIER •

    $default  reduce using rule 79 (expression)


State 79

   81 expression: "++" IDENTIFIER •

    $default  reduce using rule 81 (expression)


State 80

   82 expression: "--" IDENTIFIER •

    $default  reduce using rule 82 (expression)


State 81

   46 expression: expression • "+" expression
   47           | expression • "-" expression
   48           | expression • "*" expression
   49           | expression • "/" expression
   50           | expression • "%" expression
   51           | expression • "|" expression
   52           | expression • "&" expression
   53           | expression • ">" expression
   54           | expression • "<" expression
   55           | expression • "^" expression
   56           | expression • "<<" expression
   57           | expression • ">>" expression
   58           | expression • "||" expression
   59           | expression • "&&" expression
   60           | expression • ">=" expression
   61           | expression • "<=" expression
   62           | expression • "==" expression
   63           | expression • "!=" expression
   77           | "!" expression •

    $default  reduce using rule 77 (expression)


State 82

   80 expression: "&" IDENTIFIER •

    $default  reduce using rule 80 (expression)


State 83

   46 expression: expression • "+" expression
   47           | expression • "-" expression
   48           | expression • "*" expression
   49           | expression • "/" expression
   50           | expression • "%" expression
   51           | expression • "|" expression
   52           | expression • "&" expression
   53           | expression • ">" expression
   54           | expression • "<" expression
   55           | expression • "^" expression
   56           | expression • "<<" expression
   57           | expression • ">>" expression
   58           | expression • "||" expression
   59           | expression • "&&" expression
   60           | expression • ">=" expression
   61           | expression • "<=" expression
   62           | expression • "==" expression
   63           | expression • "!=" expression
   78           | "~" expression •

    $default  reduce using rule 78 (expression)


State 84

   27 functionCall: IDENTIFIER "(" • arguments ")"

    "("               shift, and go to state 48
    "+"               shift, and go to state 50
    "-"               shift, and go to state 51
    "*"               shift, and go to state 52
    "++"              shift, and go to state 53
    "--"              shift, and go to state 54
    "!"               shift, and go to state 55
    "&"               shift, and go to state 56
    "~"               shift, and go to state 57
    INTEGER_LITERAL   shift, and go to state 58
    FLOATING_LITERAL  shift, and go to state 59
    BOOLEAN_LITERAL   shift, and go to state 60
    STRING_LITERAL    shift, and go to state 61
    IDENTIFIER        shift, and go to state 72

    $default  reduce using rule 29 (arguments)

    functionCall   go to state 64
    arguments      go to state 123
    argumentsList  go to state 124
    expression     go to state 125


State 85

   83 expression: IDENTIFIER "++" •

    $default  reduce using rule 83 (expression)


State 86

   84 expression: IDENTIFIER "--" •

    $default  reduce using rule 84 (expression)


State 87

   64 expression: IDENTIFIER "=" • expression

    "("               shift, and go to state 48
    "+"               shift, and go to state 50
    "-"               shift, and go to state 51
    "*"               shift, and go to state 52
    "++"              shift, and go to state 53
    "--"              shift, and go to state 54
    "!"               shift, and go to state 55
    "&"               shift, and go to state 56
    "~"               shift, and go to state 57
    INTEGER_LITERAL   shift, and go to state 58
    FLOATING_LITERAL  shift, and go to state 59
    BOOLEAN_LITERAL   shift, and go to state 60
    STRING_LITERAL    shift, and go to state 61
    IDENTIFIER        shift, and go to state 72

    functionCall  go to state 64
    expression    go to state 126


State 88

   65 expression: IDENTIFIER "+=" • expression

    "("               shift, and go to state 48
    "+"               shift, and go to state 50
    "-"               shift, and go to state 51
    "*"               shift, and go to state 52
    "++"              shift, and go to state 53
    "--"              shift, and go to state 54
    "!"               shift, and go to state 55
    "&"               shift, and go to state 56
    "~"               shift, and go to state 57
    INTEGER_LITERAL   shift, and go to state 58
    FLOATING_LITERAL  shift, and go to state 59
    BOOLEAN_LITERAL   shift, and go to state 60
    STRING_LITERAL    shift, and go to state 61
    IDENTIFIER        shift, and go to state 72

    functionCall  go to state 64
    expression    go to state 127


State 89

   66 expression: IDENTIFIER "-=" • expression
